Fix alignment

--- a/src/css/collegecard.module.css
+++ b/src/css/collegecard.module.css
@@ -230,3 +230,9 @@
     width: 50%;
     font-weight: 700;
 }
+
+.btnIcon{
+    font-size: 1.2rem;
+    margin-right: .5rem;
+    font-weight: 500;
+}
